--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/nextjs-registry": "^1.0.1",
     "@prisma/client": "5.21.1",
     "antd": "^5.21.5",
+    "framer-motion": "^11.11.11",
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18"
