--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "5.21.1",
     "antd": "^5.21.5",
     "framer-motion": "^11.11.11",
+    "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18"
