--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.1",
-    "@prisma/client": "5.21.1",
     "antd": "^5.21.5",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.11.11",
@@ -18,6 +17,7 @@
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
+    "recharts": "^2.13.3",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
@@ -36,7 +36,6 @@
     "eslint-plugin-unused-imports": "^4.1.4",
     "postcss": "^8",
     "prettier": "^3.3.3",
-    "prisma": "^5.21.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
