--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.1",
     "antd": "^5.21.5",
+    "csv-parse": "^5.5.6",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.11.11",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^2.13.3",
+    "swr": "^2.2.5",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
