--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.1",
     "antd": "^5.21.5",
-    "csv-parse": "^5.5.6",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.11.11",
     "lodash": "^4.17.21",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
+    "papaparse": "^5.4.1",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^2.13.3",
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@types/lodash": "^4.17.13",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^8.11.0",
